# ignore-folders-in-spotlight

./: .gitignore  LICENSE  README.md  ignore_folders_in_spotlight.py  pyproject.toml
